Fix for very small screens to eliminate horizontal scrolling

--- a/styles/_blog.less
+++ b/styles/_blog.less
@@ -1,6 +1,9 @@
+html {
+  overflow-x: hidden;
+}
+
 body {
   background-color: @badgerWhite;
-  overflow-x: hidden;
 }
 
 main {
